...
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="l8P-2q-V3R" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Wbz-9i-c5o"/>
                            <constraint firstItem="l8P-2q-V3R" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="a9E-Ng-e4A"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Dashboard" id="K1P-ys-4Jv"/>
                    <connections>
                        <outlet property="ScoreView" destination="l8P-2q-V3R" id="nem-eL-hZY"/>
                        <outlet property="scoreLabel" destination="RYY-dH-5GA" id="unk-PR-45j"/>
                        <segue destination="azc-i6-0Z9" kind="show" identifier="homeToDetails" id="8s0-ZE-A82"/>
                    </connections>
                </viewController>
...
                                    <constraint firstItem="mda-Rz-Fcs" firstAttribute="leading" secondItem="FDq-6A-6bO" secondAttribute="leading" constant="15" id="ziF-Jl-XvC"/>
                                </constraints>
                            </view>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="imx-ZS-yZd">
                                <rect key="frame" x="20" y="449" width="374" height="300"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Debt Information" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SdO-TT-0FJ">
                                        <rect key="frame" x="0.0" y="5" width="374" height="25"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="25" id="juu-Oa-434"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <nil key="textColor"/>
...
