...
    addborderToScoreView()
    
    Task {
      await fetchCreditInfo()
      
      guard creditInfo != nil else {
        scoreLabel?.text = "Error"
        return
      }
      
      if scoreLabel != nil { self.configureScoreLabel() }
      if scoreView != nil { self.configureScoreView() }
    }
...
